feat: 3.17 数理逻辑结束

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,7 @@
     "*.wxss": "css",
     "*.wxs": "javascript",
     "math.h": "c",
-    "ctype.h": "c"
+    "ctype.h": "c",
+    "334.C": "cpp"
   }
 }
